Release 3.1.3